@@ -1,5 +1,10 @@
 2009-06-02  Thomas Moulard  <thomas.moulard@gmail.com>
 
+	Remove pkg.m4.
+	* build-aux/pkg.m4: Remove.
+
+2009-06-02  Thomas Moulard  <thomas.moulard@gmail.com>
+
 	Add Libtool rules.
 	* Makefile.am: Here.
 
